[tool.poetry]
name = "anypay"
version = "0.1.0"
description = "Asynchronous wrapper for AnyPay"
authors = ["Andrew Yarche <luminosoda@youngwaves.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
