[tool.poetry]
name = "anypay"
version = "0.1.0"
description = "Asynchronous wrapper for AnyPay"
authors = ["Andrew Yarche <luminosoda@youngwaves.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
pydantic = "^1.6.1"
email-validator = "^1.1.1"

ujson = { version = "^3.1.0", optional = true }
cchardet = { version = "^2.1.6", optional = true }
aiodns = { version = "^2.0.0", optional = true }
brotlipy = { version = "^0.7.0", optional = true }

[tool.poetry.extras]
speedups = ["ujson", "cchardet", "aiodns", "brotlipy"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
